[b]Version 0.6.0rc1 (not released yet)[/b]:

(2008-01-16)
 * Now "Stay on top" is made properly, not cleaning the other flags.

(2008-01-15)
 * Now the colorkey is passed properly to mplayer.
 * Added a new option: Options->Visualize motion vectors (-lavdopts vismv=7).

(2008-01-14)
 * Added gl:yuv=3:lscale=1 in the video output combo in preferences.

(2008-01-10)
 * Added an icon in the Instances tab so it doesn't look so empty 
   (instance1.png and instance2.png).
 * Moved the seeking options in the Interface section to another tab.

(2008-01-09)
 * Added the possibility to update the position of video while
   dragging the time slider (instead of updating it only when the
   slider has been released). Currently it's only possible to
   enable this option by changing the option update_while_seeking in
   smplayer.ini. There'll be an option in preferences soon.
 * Added an option in Preferences->Interface to configure that option.

(2008-01-08)
 * Added an icon for Help->FAQ (faq.png).
 * Added an icon for Help->About Qt. The icon has been taken from the Qt
   sources (qmessagebox.cpp). This icon can't be changed by any icon theme
   (I don't think Trolltech would like it).

(2008-01-06)
 * The subtitles size will increase or decrease in steps of 1 instead of
   0.2 if using SSA/ASS lib (it requires restart mplayer, which is slower).

(2008-01-04)
 * Fixed a crash which may happen if trying to select a subtitle but
   the subtitle list was empty.

(2008-01-03)
 * Now the GPL in English is in html too. From now on, all documents
   that smplayer have to load should be in html. This is because the
   debian packager compress all txt files, and so smplayer won't able
   to find them.
 * The file FAQ.txt has been moved to docs/en and converted to html.
 * New option Help->FAQ, which will display the FAQ in your web browser.

(2008-01-02)
 * Added a function to get the path of a translatable document. The 